<resources>
    <string name="app_name">AGA Disabler</string>
    <string name="open">open drawer</string>
    <string name="close">close drawer</string>
    <string name="backwards_compatible_key_activated_succesfully">Backwards-compatible key activated successfully</string>
    <string name="license_key_activated_successfully">License key activated successfully</string>
    <string name="err_license_internal">Internal error</string>
    <string name="err_license_internal_server">Internal server error</string>
    <string name="err_licence_invalid_license">Invalid license</string>
    <string name="err_license_invalid_package_name">Invalid package name</string>
    <string name="err_license_licence_terminated">License terminated</string>
    <string name="err_license_network_disconnected">Network disconnected</string>
    <string name="err_license_network_general">Network general error</string>
    <string name="err_license_unknown">Error unknown</string>
    <string name="err_license_code_unknown">Error code unknown %1$s, status %2$s</string>
    <string name="err_license_not_current_date">Not current date</string>
    <string name="err_license_ver_code_mismatch">Caller package version code mismatch</string>
    <string name="err_license_null_params">NULL params</string>
    <string name="err_license_user_disagrees_license_agreement">User disagrees EULA</string>
    <string name="no_intent">License activation intent is not available</string>
    <string name="no_intent_action">License activation intent action is not available</string>
    <string name="klm_action_successful">Action successful</string>
    <string name="elm_action_successful">Action successful</string>
    <string name="err_klm_internal">KnoxLicenseManager: Internal error</string>
    <string name="err_klm_internal_server">KnoxLicenseManager: Internal server error</string>
    <string name="err_klm_licence_invalid_license">KnoxLicenseManager: Invalid license</string>
    <string name="err_klm_invalid_package_name">KnoxLicenseManager: Invalid package name</string>
    <string name="err_klm_licence_terminated">KnoxLicenseManager: License terminated</string>
    <string name="err_klm_network_disconnected">KnoxLicenseManager: Network disconnected</string>
    <string name="err_klm_network_general">KnoxLicenseManager: Network general error</string>
    <string name="err_klm_unknown">KnoxLicenseManager: Error unknown</string>
    <string name="err_klm_code_unknown">KnoxLicenseManager: Error code unknown %1$s, status %2$s</string>
    <string name="err_klm_not_current_date">KnoxLicenseManager: Not current date</string>
    <string name="err_klm_sig_mismatch">KnoxLicenseManager: Caller package signature mismatch</string>
    <string name="err_klm_ver_code_mismatch">KnoxLicenseManager: Caller package version code mismatch</string>
    <string name="err_klm_null_params">KnoxLicenseManager: NULL params</string>
    <string name="err_klm_user_disagrees_license_agreement">KLM: User disagrees EULA</string>
    <string name="err_klm_license_expired">KLM: License expired</string>
    <string name="err_klm_license_deactivated">KLM: License deactivated</string>
    <string name="err_klm_license_quantity_exhausted">KLM: License quantity exhausted</string>
    <string name="err_klm_license_activation_not_found">KLM: License activation not found</string>
    <string name="err_klm_license_quantity_exhausted_on_auto_release">KLM: License quantity exhausted on automatic release</string>
    <string name="err_elm_internal">EnterpriseLicenseManager: Internal error</string>
    <string name="err_elm_internal_server">EnterpriseLicenseManager: Internal server error</string>
    <string name="err_elm_licence_invalid_license">EnterpriseLicenseManager: Invalid license</string>
    <string name="err_elm_invalid_package_name">EnterpriseLicenseManager: Invalid package name</string>
    <string name="err_elm_licence_terminated">EnterpriseLicenseManager: License terminated</string>
    <string name="err_elm_network_disconnected">EnterpriseLicenseManager: Network disconnected</string>
    <string name="err_elm_network_general">EnterpriseLicenseManager: Network general error</string>
    <string name="err_elm_unknown">EnterpriseLicenseManager: Error unknown</string>
    <string name="err_elm_code_unknown">EnterpriseLicenseManager: Error code unknown %1$s, status %2$s</string>
    <string name="err_elm_not_current_date">EnterpriseLicenseManager: Not current date</string>
    <string name="err_elm_sig_mismatch">EnterpriseLicenseManager: Caller package signature mismatch</string>
    <string name="err_elm_ver_code_mismatch">EnterpriseLicenseManager: Caller package version code mismatch</string>
    <string name="err_elm_null_params">EnterpriseLicenseManager: NULL params</string>
    <string name="err_elm_user_disagrees_license_agreement">EnterpriseLicenseManager: User disagrees EULA</string>
    <string name="api_level_notice">App Requirement</string>
    <string name="facebook" translatable="false">https://m.facebook.com/profile.php?id=100007071872377</string>
    <string name="youtube" translatable="false">https://www.youtube.com/channel/UC8CvXnvQqC0nByP0YBk_zmg</string>
    <string name="whats" translatable="false">https://chat.whatsapp.com/GwNkb5zsY5VJCtbcrvgnyQ</string>
    <string name="tele" translatable="false">https://t.me/HACKER_TABLET_ANTONY</string>
    <string name="title_activity_settings">Settings</string>
    <string name="zero" translatable="false">0000</string>
    <string name="description" translatable="false">This App is made for manage your device</string>
    <string name="error_title" translatable="false">Error Details</string>
    <string name="softkey_cancel">Cancel</string>
    <string name="softkey_ok">OK</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="err_license_sig_mismatch">Caller package signature mismatch</string>
    <string name="device_admin_ex">This app uses the Device Administrator permission. (android.permission.BIND_DEVICE_ADMIN) Device Admin permission is used for just enabling knox license, this application does not use any Administrator policies</string>
    <string name="device_admin_fullex">We agree we will protect the privacy and legal rights of users.\n AGA Disabler application does not gather any user information or google account information.\n Samsung KNOX API is used by this application\n and you need to agree to Samsung\'s Terms and Conditions\n to use this application.\n\n I\'m the User of this app agree to :\n</string>
    <string name="privacy_policy_des">Privacy policy :\nhttps://www2.samsungknox.com/en/privacy-policy-eu</string>
    <string name="agr">I Agree</string>
    <string name="enable_admin_btn">Enable Admin \n Permissions</string>
    <string name="check_admin">Check Admin Permission.\nPlease wait.</string>
    <string name="activate_klm">Activating KLM key.\nPlease wait.</string>
    <string name="activate_elm">Activating ELM key.\nPlease wait.</string>
    <string name="disable_app">Disabling This App</string>
    <string name="ena">Enabled</string>
    <string name="app_set">App Settings</string>
    <string name="manzoma_title">Control Your Device</string>
    <string name="launch_app">Launch App</string>
    <string name="open_app_settings">Open App Settings</string>
    <string name="uninstall_this_app">Uninstall this app</string>
    <string name="control_dev">Control Your Device</string>
    <string name="sign_in">Sign in</string>
    <string name="google_it">Google it</string>
    <string name="play_store">Play Store</string>
    <string name="galaxy_store">Galaxy Store</string>
    <string name="app_states">App States :</string>
    <string name="dev_set">Device Settings</string>
    <string name="disable_android_browser">Disable Android Browser</string>
    <string name="disable_voice_dialer">Disable Voice Dialer</string>
    <string name="disable_youtube">Disable Youtube</string>
    <string name="disable_market">Disable Market</string>
    <string name="disable_wifi_settings">Disable Wifi Settings</string>
    <string name="disable_lockscreen_settings">Disable LockScreen Settings</string>
    <string name="hide_status_bar">Hide Status Bar</string>
    <string name="disable_notification">Disable Notification</string>
    <string name="disable_multi_window">Disable Multi Window</string>
    <string name="disable_task_manager">Disable Task Manager</string>
    <string name="prevent_date_settings_change">Prevent Date Settings Change</string>
    <string name="disable_dex_mode">Disable Dex Mode</string>
    <string name="prevent_gps_state_change">Prevent Gps State Change</string>
    <string name="disable_multi_user">Disable Multi User</string>
    <string name="disable_incoming_calls">Disable Incoming Calls</string>
    <string name="disable_outgoing_calls">Disable Outgoing Calls</string>
    <string name="disable_incoming_sms">Disable Incoming SMS</string>
    <string name="disable_outgoing_sms">Disable Outgoing SMS</string>
    <string name="disable_airplane_mode">Disable Airplane Mode</string>
    <string name="disable_non_market_apps_install">Disable Non Market Apps Install</string>
    <string name="disable_bluetooth">Disable Bluetooth</string>
    <string name="disable_clipboard_between_apps">Disable Clipboard Between Apps</string>
    <string name="disable_data_saving">Disable Data Saving</string>
    <string name="disable_developer_mode">Disable Developer Mode</string>
    <string name="disable_factory_reset">Disable Factory Reset</string>
    <string name="disable_fast_encryption">Disable Fast Encryption</string>
    <string name="disable_firmware_recovery">Disable Firmware Recovery</string>
    <string name="disable_google_sync">Disable Google Sync</string>
    <string name="disable_google_crash_report">Disable Google Crash Report</string>
    <string name="disable_ota_upgrade">Disable OTA Upgrade</string>
    <string name="disable_power_off">Disable Power Off</string>
    <string name="disable_safe_mode">Disable Safe Mode</string>
    <string name="disable_power_saving_mode">Disable Power Saving Mode</string>
    <string name="disable_screen_pinning">Disable Screen Pinning</string>
    <string name="disable_settings_change">Disable Settings Change</string>
    <string name="disable_share_list">Disable Share List</string>
    <string name="disable_status_bar_expansion">Disable Status Bar Expansion</string>
    <string name="disable_force_stop_system_apps">Disable Force Stop System Apps</string>
    <string name="disable_usb_host_storage">Disable USB Host Storage</string>
    <string name="disable_mobile_data_limit">Disable Mobile Data Limit</string>
    <string name="disable_vpn">Disable VPN</string>
    <string name="disable_wallpaper_change">Disable WallPaper Change</string>
    <string name="disable_wifi">Disable Wifi</string>
    <string name="disable_wifi_direct">Disable Wifi Direct</string>
    <string name="disable_google_backup">Disable Google Backup</string>
    <string name="disable_camera">Disable Camera</string>
    <string name="disable_mobile_data">Disable Mobile Data</string>
    <string name="disable_clipboard">Disable Clipboard</string>
    <string name="disable_headphones">Disable HeadPhones</string>
    <string name="disable_lockscreen">Disable LockScreen</string>
    <string name="disable_screen_capture">Disable Screen Capture</string>
    <string name="disable_tethering">Disable Tethering</string>
    <string name="disable_usb_debugging">Disable USB Debugging</string>
    <string name="disable_pc_connections">Disable PC Connections</string>
    <string name="disable_roaming">Disable Roaming</string>
    <string name="applications_policy">Applications Policy</string>
    <string name="disable_sd_card">Disable SD Card</string>
</resources>