<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/policy_text_style"
        android:gravity="start|center"
        android:textStyle="bold"
        android:layout_height="60dp"
        android:textSize="24sp"
        android:text="@string/manzoma_title" />
    <ScrollView
        android:layout_width="fill_parent"
        android:padding="6dp"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    style="@style/policy_img_style"
                    android:src="@drawable/apps_pref_icon"/>
                <TextView
                    style="@style/policy_text_style"
                    android:text="@string/applications_policy"/>
            </LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/android_browser"
                android:text="@string/disable_android_browser"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/voice_dialer"
                android:text="@string/disable_voice_dialer"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/youtube"
                android:text="@string/disable_youtube"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/android_market"
                android:text="@string/disable_market"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/non_market"
                android:text="@string/disable_non_market_apps_install"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    style="@style/policy_img_style"
                    android:src="@drawable/kiosk_pref_icon"/>
                <TextView
                    style="@style/policy_text_style"
                    android:text="ProKiosk Mode"
                    />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/wifi_settings_switch"
                android:text="@string/disable_wifi_settings"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/lockscreen_settings_switch"
                android:text="@string/disable_lockscreen_settings"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/statusbar_mode"
                android:text="@string/hide_status_bar"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/noti_mode"
                android:text="@string/disable_notification"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/multi_window"
                android:text="@string/disable_multi_window"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/task_manager"
                android:text="@string/disable_task_manager"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    style="@style/policy_img_style"
                    android:src="@drawable/system_pref_icon"/>
                <TextView
                    style="@style/policy_text_style"
                    android:text="System Policy"/>
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/date_change"
                android:text="@string/prevent_date_settings_change"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/disable_dex"
                android:text="@string/disable_dex_mode"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/disable_gps"
                android:text="@string/prevent_gps_state_change"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/multi_user"
                android:text="@string/disable_multi_user"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    style="@style/policy_img_style"
                    android:src="@drawable/system_pref_icon"/>
                <TextView
                    style="@style/policy_text_style"
                    android:text="Phone Policy"/>
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/incoming_calls"
                android:text="@string/disable_incoming_calls"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/outcoming_calls"
                android:text="@string/disable_outgoing_calls"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/incoming_sms"
                android:text="@string/disable_incoming_sms"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/outcoming_sms"
                android:text="@string/disable_outgoing_sms"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    style="@style/policy_img_style"
                    android:src="@drawable/system_pref_icon"/>
                <TextView
                    style="@style/policy_text_style"
                    android:text="Restriction Policy"/>
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/airplane"
                android:text="@string/disable_airplane_mode"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/bluetooth"
                android:text="@string/disable_bluetooth"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/clipboard_apps"
                android:text="@string/disable_clipboard_between_apps"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/datasaving"
                android:text="@string/disable_data_saving"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/developer"
                android:text="@string/disable_developer_mode"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/factory_reset"
                style="@style/policy_switch_style"
                android:text="@string/disable_factory_reset" />
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/fast_encrypt"
                android:text="@string/disable_fast_encryption"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/firmware"
                android:text="@string/disable_firmware_recovery"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/google_sync"
                android:text="@string/disable_google_sync"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/google_report"
                android:text="@string/disable_google_crash_report"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/ota"
                android:text="@string/disable_ota_upgrade"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/poweroff"
                android:text="@string/disable_power_off"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/power_save"
                android:text="@string/disable_power_saving_mode"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/safemode"
                android:text="@string/disable_safe_mode"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/screenpin"
                android:text="@string/disable_screen_pinning"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/settings_change"
                android:text="@string/disable_settings_change"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/sharelist"
                android:text="@string/disable_share_list"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/statusbar_exp"
                android:text="@string/disable_status_bar_expansion"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/stopsystem"
                android:text="@string/disable_force_stop_system_apps"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/usbhost"
                android:text="@string/disable_usb_host_storage"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/mobile_limit"
                android:text="@string/disable_mobile_data_limit"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/vpn"
                android:text="@string/disable_vpn"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/wallpaper"
                android:text="@string/disable_wallpaper_change"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/wifi"
                android:text="@string/disable_wifi"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/wifidirect"
                android:text="@string/disable_wifi_direct"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/backup"
                android:text="@string/disable_google_backup"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/camera"
                android:text="@string/disable_camera"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/celldata"
                android:text="@string/disable_mobile_data"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/clipboard"
                android:text="@string/disable_clipboard"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/headphone"
                android:text="@string/disable_headphones"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/lockscreen"
                android:text="@string/disable_lockscreen"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/screen_capture"
                android:text="@string/disable_screen_capture"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/sdcard"
                android:text="@string/disable_sd_card"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/teth"
                android:text="@string/disable_tethering"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/usb_debug"
                android:text="@string/disable_usb_debugging"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/pc_connect"
                android:text="@string/disable_pc_connections"/>
            <androidx.appcompat.widget.SwitchCompat
                style="@style/policy_switch_style"
                android:id="@+id/roaming"
                android:text="@string/disable_roaming"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="45dp"
                    android:scaleType="fitXY"
                    android:gravity="center"
                    android:layout_height="45dp"
                    android:src="@drawable/app_settings"
                     />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="start|center_vertical"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold|italic"
                    android:text="Settings Policy"/>
            </LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:id="@+id/wifi_settings_hide"
                android:text="@string/disable_airplane_mode"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/apps_set_but"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="start|center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:text="Disable Wifi Settings"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/install_apk"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="start|center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:text="Install APK"/>
            </LinearLayout>







        </LinearLayout>
    </ScrollView>

</LinearLayout>