<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:gravity="start|center_vertical"
            android:padding="5dp"
            android:text="@string/app_states"
            android:textAppearance="@style/merrifont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/state"
            android:textAppearance="@style/robotofont"
            android:textSize="14sp"
            android:gravity="start|center_vertical"
            android:padding="5dp"
            android:text="@string/ena"
            android:textColor="?attr/permission_text_color_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
        <TextView
            android:id="@+id/info"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textSize="14sp"
            android:gravity="start|center_vertical"
            android:padding="5dp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <RelativeLayout
        style="@style/appinfo_linear_style">
        <Button
            android:id="@+id/launch"
            android:layout_alignParentStart="true"
            style="@style/appinfo_button_style"
            android:text="@string/launch_app"/>
        <Button
            android:id="@+id/open_settings"
            android:layout_alignParentEnd="true"
            style="@style/appinfo_button_style"
            android:text="@string/open_app_settings" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/appinfo_linear_style">
        <Button
            android:id="@+id/disable_app"
            android:layout_alignParentStart="true"
            style="@style/appinfo_button_style"
            android:text="@string/disable_app" />
        <Button
            android:id="@+id/uni_app"
            android:layout_alignParentEnd="true"
            style="@style/appinfo_button_style"
            android:text="@string/uninstall_this_app" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/appinfo_linear_style">
        <Button
            android:id="@+id/play_but"
            android:layout_alignParentStart="true"
            style="@style/appinfo_button_style"
            android:text="@string/play_store" />
        <Button
            android:id="@+id/google_but"
            android:layout_alignParentEnd="true"
            style="@style/appinfo_button_style"
            android:text="@string/google_it" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/appinfo_linear_style">
        <Button
            android:id="@+id/galaxy_but"
            android:layout_alignParentStart="true"
            style="@style/appinfo_button_style"
            android:text="@string/galaxy_store" />
    </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>